fixed the lightbox z-index

--- a/navbar-drawer.css
+++ b/navbar-drawer.css
@@ -26,11 +26,12 @@
     display: block;
   }
 }
+
 .drawer {
   height: 100vh;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 6;
   top: 0;
   left: 0;
   background-color: white;
@@ -63,6 +64,7 @@
 }
 
 .backdrop {
+  z-index: 2;
   display: none;
   width: 100%;
   height: 100%;
